k8s/base/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  labels:
    app: nextcloud
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: nextcloud
